--- a/src/css/base.css
+++ b/src/css/base.css
@@ -17,11 +17,12 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  min-width: 100vw;
-  min-height: 100vh;
+  /* display: flex;
+  flex-direction: column; */
+  /* min-width: 100vw;
+  min-height: 100vh; */
   margin: 0;
+  padding: 16px;
 }
 
 main {
